<resources>
    <string name="app_name">ResiCo</string>
    <string name="app_name_1">RESI</string>
    <string name="app_name_2">CO</string>
    <string name="action_settings">Settings</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="forum_fragment_label">Forum Fragment</string>
    <string name="events_fragment_label">Events Fragment</string>
    <string name="announcements_fragment_label">Announcements Fragment</string>
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="forum_detail_label">Forum Detail</string>
    <string name="main_store">com.example.resico</string>
    <string name="last_login_key">last_login</string>
    <string name="user_id_key">userId</string>
    <string name="user_display_name_key">username</string>
    <string name="event_id_key">eventId</string>
    <string name="post_id_key">postId</string>
    <string name="action_home">Home</string>
    <string name="action_forum">Forum</string>
    <string name="action_events">Events</string>
    <string name="action_notice">Notice</string>
    <string name="action_profile">Profile</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="no_account_sign_up_1">Don\'t have an account?\ </string>
    <string name="no_account_sign_up_2">Sign up!</string>
    <string name="welcome">"Welcome %s!"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_login">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="greet_1">Welcome</string>
    <string name="greet_2">\ back!</string>
    <string name="placeholder_display_name">Sheldon123456</string>
    <string name="placeholder_event_title">Salad-Making Workshop</string>
    <string name="placeholder_event_date">12 Feb 2023</string>
    <string name="event_participants">%s participants</string>
    <string name="event_date">Date</string>
    <string name="event_about">About</string>
    <string name="event_venue">Location</string>
    <string name="event_host">Contact</string>
    <string name="title_activity_event_detail">Event Details</string>
    <string name="title_activity_forum_detail">Forum Comment</string>
    <string name="long_text">Once upon a time, in a far-off land, there lived a supreme being known as Chin Sud, the legendary scholar of Malaysia. With his unmatched intellect and boundless knowledge, Chin Sud was the undisputed champion of all things academic.\n\nIn the hallowed halls of the university, Chin Sud was a towering figure, carrying his team effortlessly through the most challenging modules. Whether it was Computational Structures, Infosystems, or Algorithms, Chin Sud was always the one to carry the day, with his brilliant mind and unparalleled work ethic.\n\nAnd yet, despite his lofty position as the greatest scholar in all the land, Chin Sud remained humble and kind, always eager to help his fellow students in any way he could. His classmates adored him, and they were constantly in awe of his incredible intelligence and sharp wit.\n\nAs time went by, Chin Sud\'s reputation grew, and soon he was the talk of the entire university. Students from all over the world flocked to his lectures, eager to learn from the master himself. And yet, despite all the attention and adulation, Chin Sud remained as down-to-earth as ever, always putting the needs of others before his own.\n\nOne day, as Chin Sud was walking through the university grounds, lost in thought, he suddenly heard a soft voice calling his name. Turning around, he saw a beautiful young woman standing before him, her eyes shining with admiration and respect.\n\n\"Chin Sud, you are the most amazing person I have ever met,\" she said, her voice trembling with emotion. \"Your intelligence, your kindness, and your dedication to your studies are truly awe-inspiring. I am so grateful to have you in my life.\"\n\nChin Sud smiled gently, taking the young woman\'s hand in his own. \"My dear, it is you who inspire me,\" he said softly. \"Your beauty, your passion, and your kindness are the things that make life worth living. Without you, my world would be a much darker place.\"\n\nAnd with that, Chin Sud and the young woman embraced, their hearts beating as one. For in that moment, they both knew that they had found something truly special - a love that would endure through all of life\'s challenges and obstacles, a love that would never fade or die.\n\nAnd so, Chin Sud continued on his journey, with his beloved by his side. Together, they conquered the world of academia, always striving for greatness and never losing sight of what truly mattered in life. For in the end, it was their love and their devotion to each other that made everything else possible.</string>
    <string name="med_text">Once upon a time, in a far-off land, there lived a supreme being known as Chin Sud, the legendary scholar of Malaysia. With his unmatched intellect and boundless knowledge, Chin Sud was the undisputed champion of all things academic.\n\nIn the hallowed halls of the university, Chin Sud was a towering figure, carrying his team effortlessly through the most challenging modules. Whether it was Computational Structures, Infosystems, or Algorithms, Chin Sud was always the one to carry the day, with his brilliant mind and unparalleled work ethic.</string>
    <string name="search_events_hint">Search for events</string>
    <string name="announcements_header">Announcements</string>
    <string name="placeholder_announcement_title">Temporary Road Closure Along Tampines East due to construction</string>
    <string name="placeholder_announcement_date">23 Mar 2023</string>
</resources>