<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.resico.MainActivity">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/action_home" />
    <item
        android:id="@+id/nav_forums"
        android:enabled="true"
        android:icon="@drawable/ic_forum"
        android:title="@string/action_forum" />
    <item
        android:id="@+id/nav_events"
        android:enabled="true"
        android:icon="@drawable/ic_event"
        android:title="@string/action_events" />
    <item
        android:id="@+id/nav_announcements"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/action_notice" />
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/action_profile" />
</menu>